added list to documentation.html

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Sophia's Movie Database API</h1>
     <h3>Tech used:</h3>
+    <ul>
+        <li>JavaScript</li>
+        <li>Express</li>
+        <li>Json</li>
+        <li>HTML</li>
+    </ul>
 </body>
 </html>
