fixed return of docs with edits to app.get sendFile

--- a/public/docs.html
+++ b/public/docs.html
@@ -7,7 +7,8 @@
     <title>Documentation</title>
 </head>
 <body>
-    <h1>Sophia's Movie Database API</h1>
+    <h1>Sophia's Movie Database</h1>
+    <h2>API Documentation</h2>
     <h3>Tech used:</h3>
     <ul>
         <li>JavaScript</li>
