started new end points, added user

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Documentation</title>
 </head>
 <body>
     <h1>Sophia's Movie Database</h1>
     <h2>API Documentation</h2>
-    <h3>Tech used:</h3>
-    <ul>
-        <li>JavaScript</li>
-        <li>Express</li>
-        <li>Json</li>
-        <li>HTML</li>
-    </ul>
+    <table>
+        <tr>
+            <th>REQUEST</th>
+            <th>URL</th>
+            <th>HTTP METHOD</th>
+        </tr>
+        <tr>
+            <td>Get a list of students</td>
+            <td>/students</td>
+            <td>GET</td>
+        </tr>
+    </table>
 </body>
 </html>
