added css to table in docs

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -10,17 +10,19 @@
 <body>
     <h1>Sophia's Movie Database</h1>
     <h2>API Documentation</h2>
-    <table>
-        <tr>
-            <th>REQUEST</th>
-            <th>URL</th>
-            <th>HTTP METHOD</th>
-        </tr>
-        <tr>
-            <td>Get a list of students</td>
-            <td>/students</td>
-            <td>GET</td>
-        </tr>
-    </table>
+    <div class="table">
+        <table class="table">
+            <tr>
+                <th>REQUEST</th>
+                <th>URL</th>
+                <th>HTTP METHOD</th>
+            </tr>
+            <tr>
+                <td>Get a list of students</td>
+                <td>/students</td>
+                <td>GET</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
