--- a/public/documentation.html
+++ b/public/documentation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Documentation</title>
 </head>
 <body>
@@ -18,9 +18,39 @@
                 <th>HTTP METHOD</th>
             </tr>
             <tr>
-                <td>Get a list of students</td>
-                <td>/students</td>
+                <td>Get a list of all films</td>
+                <td>/sophs_films</td>
                 <td>GET</td>
+            </tr>
+            <tr>
+                <td>Films by genre</td>
+                <td>/sophs_films/genres/[genre]</td>
+                <td>GET</td>
+            </tr>
+            <tr>
+                <td>Get info on a specific director</td>
+                <td>/sophs_films/directors/[firstName_lastName]</td>
+                <td>GET</td>
+            </tr>
+            <tr>
+                <td>Register user</td>
+                <td>/new_user</td>
+                <td>POST</td>
+            </tr>
+            <tr>
+                <td>De-register user</td>
+                <td>/delete_user</td>
+                <td>DELETE</td>
+            </tr>
+            <tr>
+                <td>Add a film to your favorites</td>
+                <td>/add_film</td>
+                <td>POST</td>
+            </tr>
+            <tr>
+                <td>Remove a film from your favorites</td>
+                <td>/remove_film</td>
+                <td>DELETE</td>
             </tr>
         </table>
     </div>
