udpated http method in docs

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -50,7 +50,7 @@
             <tr>
                 <td>Update user name</td>
                 <td>/users/:idNum</td>
-                <td>DELETE</td>
+                <td>PUT</td>
             </tr>
             <tr>
                 <td>Add a film to your favorites</td>
