--- a/public/documentation.html
+++ b/public/documentation.html
@@ -50,12 +50,12 @@
             <tr>
                 <td>Update user name</td>
                 <td>/users/:idNum</td>
-                <td>DELETE</td>
+                <td>PUT</td>
             </tr>
             <tr>
                 <td>Add a film to your favorites</td>
                 <td>/users/:idNum/:filmTitle</td>
-                <td>POST</td>
+                <td>PUT</td>
             </tr>
             <tr>
                 <td>Remove a film from your favorites</td>
