--- a/public/documentation.html
+++ b/public/documentation.html
@@ -55,7 +55,7 @@
             <tr>
                 <td>Add a film to your favorites</td>
                 <td>/users/:idNum/:filmTitle</td>
-                <td>POST</td>
+                <td>PUT</td>
             </tr>
             <tr>
                 <td>Remove a film from your favorites</td>
