correction to docs

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                 <td>Get films by director name</td>
-                <td>/films/director/:directorName</td>
+                <td>/films/director/[Director Name]</td>
                 <td>GET</td>
                 <td>None</td>
                 <td>A JSON object returning a list of films by the specified director.</td>
