--- a/public/documentation.html
+++ b/public/documentation.html
@@ -83,7 +83,7 @@
             </tr>
             <tr>
                 <td>Update user information</td>
-                <td>/users</td>
+                <td>/users/:id</td>
                 <td>PUT</td>
                 <td>Must include password in body in addition to requested update/s. You may also update password alone. Example:<br>
                     <br>
